# NeuroSAT

NeuroSAT/: NeuroSAT.cabal
NeuroSAT/src/: Grid.hs  Neuron.hs  NeuronTypes.hs
NeuroSAT/test/: Basic.hs  NeuronTest.hs
